Finally removed eclipse dependencies from core and wala sdpn packages.